# pokerogue-offline-archipelago

./: .gitignore  GACHA_CALENDAR_PATCH.md  PRIVACY.txt  README.md  TermsOfService.txt
.github/workflows/: build-android-dev.yml  build-android.yml  build-appimage.yml  build-dev-ios-branch.yaml  build-dev-ios.yaml  build-exe.yml  build-ios-branch.yml  build-ios.yml  build-macos.yml  create-release.yaml  fetch-seed.yaml
AP Client Code/: pokerogue.apworld
AP Client Code/pokerogue/: Client.py  Items.py  Locations.py  Options.py  Species.py  __init__.py  archipelago.json
AP Client Code/pokerogue/docs/: en_PokeRogue.md  setup_en.md
AP Client Code/pokerogue/test/: __init__.py
AP Client Code/pokerogue/tools/: generate_species.py  research_biome_depth.py
android/: MainActivity.java
capacitorConfig/: capacitor.config.android.json  capacitor.config.ios-dev.json  capacitor.config.ios.json
configs/android/capacitor/: capacitor.config-dev.json  capacitor.config.json
configs/android/java/: MainActivity-dev.java  MainActivity.java
configs/android/res/: styles.xml
configs/desktop/electron/: electron-builder.appimage.json  electron-builder.macos.json  electron-builder.windows.json  main.cjs  preload.cjs
configs/desktop/tauri/: Cargo.toml  lib.rs  main.rs  tauri.conf.json
configs/desktop/tauri/capabilities/: localhost.json
configs/ios/capacitor/: capacitor.config.dev.json  (+1 more)
docs/: daily-seed.txt  index.html  privacy.html  repo.json  tos.html
scripts/: apply-patches.sh  apply-post-build-patches.sh  patch-ios-appdelegate.py  patch-lib.sh  update-altstore-source.js
(+22 files in other folders)
