[package]
name = "pokerogue-offline"
version = "0.0.0"
description = "PokéRogue Offline Desktop Client"
authors = ["Scooom"]
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"

[lib]
name = "pokerogue_offline_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-localhost = "2"
portpicker = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
